ros2_ws/log/build_2024-10-25_22-51-29/controller/stderr.log
  File "/home/DATA/Test/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller/quadrupedRobot.py", line 227
    idxRR = 4, idxRL = 4, idxFR = 4, idxFL= 4
    ^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

